--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="offcanvas-body">
                   <h4>INTRODUCCIÓN</h4>
                   <!-- imagen mía lateral -->
-                  <img src="imagenes/mauricio.jpg"  class ="mt-2 mb-4 rounded w-75 " alt="">                  
+                  <img src="imagenes/mauricio.jpg"  class ="mt-2 mb-4 rounded " alt="">                  
                   <p class="lead bg-primary text-light rounded p-2">Hola programadores, soy una persona apasionada por la programación, este ciclo conocí la
                     programación web, es algo que nunca pense que me iba a gustar demasiado. En vacaciones aprendi HTML5 
                     y un poco de CSS.
@@ -106,11 +106,11 @@
                       </div>
                       <div class="button">
                           <div class="icon"><i class="bi bi-vimeo"></i></div>
-                          <span><a href="https://www.udemy.com/user/mauricio-antonio-rodriguez-jimenez/" class="text-decoration-none" style="color: #c034f4 ;">Udemy</a></span>
+                          <span><a href="https://www.udemy.com/user/mauricio-antonio-rodriguez-jimenez/" target="_blank" class="text-decoration-none" style="color: #c034f4 ;">Udemy</a></span>
                       </div>
                       <div class="button">
                           <div class="icon"><i class="bi bi-google"></i></div>
-                          <span><a href="https://drive.google.com/drive/folders/1lbJdmJLdFc-l-SK7TBzDP3FD8p-qSeTn" class="text-decoration-none" style="color: #ff0000 ;">Google</a></span>
+                          <span><a href="https://drive.google.com/drive/folders/1lbJdmJLdFc-l-SK7TBzDP3FD8p-qSeTn" target="_blank" class="text-decoration-none" style="color: #ff0000 ;">Google</a></span>
                       </div>
                   </section>
                   </div>
