--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- primera columna -->
             <div class="col-md">
               <h2 class="text-center mb-4 bg-success rounded p-1 text-white text-uppercase">Información del Estudiante</h2>
-              <img src="/imagenes/mau.png" class="rounded-circle w-50 img-fluid mx-auto d-block" alt="MauriRod">                                         
+              <img src="imagenes/mauri-principal.png" class="rounded-circle w-50 img-fluid mx-auto d-block" alt="MauriRod">                                         
               <ul class="list-group list-group-flush p-3">                                      
                 <li class="list-group-item"><span class="fw-bold">Nombres:</span> Mauricio Antonio</li>
                 <li class="list-group-item"><span class="fw-bold">Apellidos:</span> Rodríguez Jiménez</li>
