--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="offcanvas-body">
                   <h4>INTRODUCCIÓN</h4>
                   <!-- imagen mía lateral -->
-                  <img src="imagenes/mauricio.jpg"  class ="mt-2 mb-4 rounded " alt="">                  
+                  <img src="imagenes/mauricio.jpg"  class ="mt-2 mb-4 rounded img-fluid " alt="">                  
                   <p class="lead bg-primary text-light rounded p-2">Hola programadores, soy una persona apasionada por la programación, este ciclo conocí la
                     programación web, es algo que nunca pense que me iba a gustar demasiado. En vacaciones aprendi HTML5 
                     y un poco de CSS.
