--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <!-- Datos generales -->    
     <section class=" p-5" id="perfil">
-        <div class="container">          
+        <div class="container-fluid">          
           <div class="row g-4">
             <!-- primera columna -->
             <div class="col-md">
@@ -95,7 +95,7 @@
                   </div>
                   <br>
                   <!-- Mis redes sociales -->                                    
-                  <div class="container">
+                  <div class="container-fluid">
                     <h2 class="p-2 mt-2 text-center text-bg-dark">Mis redes sociales</h2>
                     <section class="wrapper">
                       <!-- Botones utilizados en cada DIV -->
@@ -259,7 +259,7 @@
 
     <!-- Certificaciones ganados -->
     <section class="p-5 bg-success" id="certificaciones">
-      <div class="container">
+      <div class="container-fluid">
         <div class="d-md-flex align-items-center justify-content-between">
             <img src="imagenes/Certificacion_word.png" class="img-fluid w-50 m-2" alt="fundamentals">
             <div class="col-md">
@@ -277,7 +277,7 @@
     </section>
     <!-- Habilidades de progrmación -->
     <section class="p-5" id="habilidades">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row g-4">
           <div class="col-md">            
             <h2 class="text-center mb-4">Habilidades de programación</h2>
@@ -305,7 +305,7 @@
     <section class="p-5" id="portafolios">
       <h2 class="text-center text-bg-dark p-3 rounded ">Portafolios</h2>
       <br>
-      <div class="container">
+      <div class="container-fluid">
         <div class="d-md-flex align-items-center justify-content-between">
             <div class="col-md">
                 <h2>Página BootsTrap</h2>
@@ -328,7 +328,7 @@
             <iframe class="rounded" width="560" height="315" src="https://www.youtube.com/embed/JV8sOTErVRo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <br>
-        <div class="container">
+        <div class="container-fluid">
           <div class="d-md-flex align-items-center justify-content-between">
             <iframe class="rounded" width="560" height="315" src="https://www.youtube.com/embed/pRAD8i10gGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="col-md">
@@ -353,7 +353,7 @@
           </div>
         </div>
         <br>
-        <div class="container">
+        <div class="container-fluid">
           <div class="d-md-flex align-items-center justify-content-between">
               <div class="col-md">
                   <h2>Inventario en Blockchain</h2>
@@ -397,7 +397,7 @@
     </section>
     <!-- Pie de pagina -->
     <footer class="p-5 bg-dark text-white text-center position-relative">
-      <div class="container">
+      <div class="container-fluid">
           <div class="lead">Copyright &copy; UNICAES <h5> Mauricio Antonio Rodríguez Jiménez</h5></div>
       </div>
       <a href="" class="position-absolute bottom-0 end-0 p-5">
